# check-iso8601-version-string

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  check_iso8601_version_string.py  setup.cfg
