[metadata]
name = check_iso8601_version_string
version = 2023.12.20
description = Tool for checking that an ISO 8601 version string (in `__version__`) is valid and set to today's date
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/simonrob/check-iso8601-version-string
author = Simon Robinson
author_email = simon@robinson.ac
license = Apache License 2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
py_modules = check_iso8601_version_string
python_requires = >=3.6

[options.entry_points]
console_scripts =
    check-iso8601-version-string = check_iso8601_version_string:main

[bdist_wheel]
universal = True
